test/expected/eval_error_backtrace.out
[CompoundList]
  [CompoundListCondition, None]
    [SimpleCommand "eval" "badcmd_xyzzy"]
[Word
  Unquoted "eval"
]
[Word
  Literal "badcmd_xyzzy"
]
shit: eval:1:1: error: Program 'badcmd_xyzzy' wasn't found.
     1 |  badcmd_xyzzy
       |  ^~~~~~~~~~~~ here.
shit: 1:1: trace location:
     1 |  eval 'badcmd_xyzzy'
       |  ^~~~~~~~~~~~~~~~~~~ here.
[Code 127]
